--- a/Gregames/OregonTrail/Segment-Change-Food-Rations.html
+++ b/Gregames/OregonTrail/Segment-Change-Food-Rations.html
@@ -6,29 +6,25 @@
 <button onclick="BareBones();">3</button> Bare_Bones<br><br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Rations-Explained"><button>4</button></a> Find_Out_The_Difference_Between_These_Options
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-Press""To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Space</button></a>
+Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Space</button></a>
 <script>
-var Rations = localStorage.getItem("Rations");
-var FPD = localStorage.getItem("FPD");
-document.getElementById('Rations').innerHTML = "Your_Current_Rations_Are_" + Rations;
+document.getElementById('Rations').innerHTML = "Your_Current_Rations_Are_" + localStorage.getItem("Rations");
 function Maintain() {
-  localStorage.setItem("Rations", Rations);
-  localStorage.setItem("FPD", FPD);
-  document.getElementById('Rations').innerHTML = "Your_Current_Rations_Are_" + Rations;
+  document.getElementById('Rations').innerHTML = "Your_Current_Rations_Are_" + localStorage.getItem("Rations");
 }
 function Filling() {
-  var Rations = "filling";
-  var FPD = 3;
+  localStorage.setItem("Rations", "filling");
+  localStorage.setItem("FPD", 3);
   Maintain();
 }
 function Meager() {
-  var Rations = "meager";
-  var FPD = 2;
+  localStorage.setItem("Rations", "meager");
+  localStorage.setItem("FPD", 2);
   Maintain();
 }
 function BareBones() {
-  var Rations = "bare-bones";
-  var FPD = 1;
+  localStorage.setItem("Rations", "bare-bones");
+  localStorage.setItem("FPD", 1);
   Maintain();
 }
 </script></body2></body1></html><script>
