--- a/Gregames/OregonTrail/Segment-Check-Supplies.html
+++ b/Gregames/OregonTrail/Segment-Check-Supplies.html
@@ -3,22 +3,14 @@
 <p id="Oxen"></p><p id="Foodlb"></p><p id="Clothing"></p><p id="Ammo"></p><p id="Axels"></p><p id="Toungues"></p><p id="Wheels"></p><p id="money"></p><br><br><br><br><br>
 <body3>Press"Space"To_Contune <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Space</button></a></body3>
 <script>
-var money = localStorage.getItem("money");
-  document.getElementById('money').innerHTML = "money: " + money;
-var Oxen = localStorage.getItem("Oxen");
-  document.getElementById('Oxen').innerHTML = "Oxen: " + Oxen;
-var Foodlb = localStorage.getItem("Foodlb");
-  document.getElementById('Foodlb').innerHTML = "Pounds_Of_Food:" + Foodlb;
-var Clothing = localStorage.getItem("Clothing");
-  document.getElementById('Clothing').innerHTML = "Sets_Of_Clothing:" + Clothing;
-var Ammo = localStorage.getItem("Ammo");
-  document.getElementById('Ammo').innerHTML = "Bullets:" + Ammo;
-var Axels = localStorage.getItem("Axels");
-  document.getElementById('Axels').innerHTML = "Wagon_Axels:" + Axels;
-var Toungues = localStorage.getItem("Toungues");
-  document.getElementById('Toungues').innerHTML = "Wagon_Toungues:" + Toungues;
-var Wheels = localStorage.getItem("Wheels");
-  document.getElementById('Wheels').innerHTML = "Wagon_Wheels:" + Wheels;
+document.getElementById('money').innerHTML = "money: " + localStorage.getItem("money");
+document.getElementById('Oxen').innerHTML = "Oxen: " + localStorage.getItem("Oxen");
+document.getElementById('Foodlb').innerHTML = "Pounds_Of_Food:" + localStorage.getItem("Foodlb");
+document.getElementById('Clothing').innerHTML = "Sets_Of_Clothing:" + localStorage.getItem("Clothing");
+document.getElementById('Ammo').innerHTML = "Bullets:" + localStorage.getItem("Ammo");
+document.getElementById('Axels').innerHTML = "Wagon_Axels:" + localStorage.getItem("Axels");
+document.getElementById('Toungues').innerHTML = "Wagon_Toungues:" + localStorage.getItem("Toungues");
+document.getElementById('Wheels').innerHTML = "Wagon_Wheels:" + localStorage.getItem("Wheels");
 
 </script></body2></body1></html><script>
   document.body.style.background = "black";
