--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -54,7 +54,7 @@ localStorage.setItem("hr", 8);
 localStorage.setItem("Rations", "filling");
 localStorage.setItem("FPD", 1);
 localStorage.setItem("HealthNum", 500);
-localStorage.setItem("milesLM", 102);
+localStorage.setItem("miles2LM", 102);
 localStorage.setItem("Isick", false);
 localStorage.setItem("Idied", false);
 localStorage.setItem("Wsick", false);
