--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -338,9 +338,8 @@ function Day() {
       localStorage.setItem("Day", 1);
       Change("Month", "+/-", 1);
     } else if (localStorage.getItem("Month") = 12) {
-      localStorage.setItem("Day", 1)
-      var Month = 1;
-      localStorage.setItem("Month", 1)
+      localStorage.setItem("Day", 1);
+      localStorage.setItem("Month", 1);
       Change("Year", "+/-", 1);
     } 
   }
@@ -356,20 +355,21 @@ function Day() {
   } else if (localStorage.getItem("Month") = 3||localStorage.getItem("Month") = 4) {
     var Randomizer = randint(1, 4);
     if (Randomizer = 1) {
-      var Wheather = "cold";
+      localStorage.setItem("Wheather", "cold");
     } else if (Randomizer = 2) {
-      var Wheather = "cool";
+      localStorage.setItem("Wheather", "cool");
     } else if (Randomizer = 3) {
-      var Wheather = "rainy";
+      localStorage.setItem("Wheather", "rainy");
     } else if (Randomizer = 4) {
-      var Wheather = "warm";
+      localStorage.setItem("Wheather", "warm");
     }
   } else if (localStorage.getItem("Month") = 5||localStorage.getItem("Month") = 6) {
     var Randomizer = randint(1, 3);
     if (Randomizer = 1) {
-      var Wheather = "rainy";
+      localStorage.setItem("Wheather", "rainy");
     } else if (Randomizer = 2) {
       var Wheather = "warm";
+      localStorage.setItem("Wheather", "warm");
     } else if (Randomizer = 3) {
       var Wheather = "hot";
     }
