--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -368,49 +368,48 @@ function Day() {
     if (Randomizer = 1) {
       localStorage.setItem("Wheather", "rainy");
     } else if (Randomizer = 2) {
-      var Wheather = "warm";
       localStorage.setItem("Wheather", "warm");
     } else if (Randomizer = 3) {
-      var Wheather = "hot";
+      localStorage.setItem("Wheather", "hot");
     }
   } else if (localStorage.getItem("Month") = 7||localStorage.getItem("Month") = 8) {
     var Randomizer = randint(1, 5);
     if (Randomizer = 1) {
-      var Wheather = "hot";
+      localStorage.setItem("Wheather", "hot");
     } else if (Randomizer = 2) {
-      var Wheather = "hot";
+      localStorage.setItem("Wheather", "hot");
     } else if (Randomizer = 3) {
-      var Wheather = "warm";
+      localStorage.setItem("Wheather", "warm");
     } else if (Randomizer = 4) {
-      var Wheather = "warm";
+      localStorage.setItem("Wheather", "warm");
     } else if (Randomizer = 5) {
-      var Wheather = "cool";
+      localStorage.setItem("Wheather", "cool");
     }
   } else if (localStorage.getItem("Month") = 9||localStorage.getItem("Month") = 10) {
     var Randomizer = randint(1, 3);
     if (Randomizer = 1) {
-      var Wheather = "cold";
+      localStorage.setItem("Wheather", "cold");
     } else if (Randomizer = 2) {
-      var Wheather = "cool";
+      localStorage.setItem("Wheather", "cool");
     } else if (Randomizer = 3) {
-      var Wheather = "warm";
+      localStorage.setItem("Weather", "warm");
     }
   } else if (localStorage.getItem("Month") = 11||localStorage.getItem("Month") = 12) {
     var Randomizer = randint(1, 3);
     if (Randomizer = 1) {
-      var Wheather = "cold";
+      localStorage.setItem("Weather", "cold");
     } else if (Randomizer = 2) {
-      var Wheather = "very-cold";
+      localStorage.setItem("Weather", "very-cold");
     } else if (Randomizer = 3) {
-      var Wheather = "snowy";
+      localStorage.setItem("Wheather", "snowy");
     }
   }
   if (localStorage.getItem("HealthNum") > 400) {
-    var Health = "good";
+    localStorage.setItem("Health", "good");
     if (localStorage.getItem("HelathNum") < 500) {
-      var Health = "fair";
+      localStorage.setItem("Health", "fair");
       if (localStorage.getItem("HealthNum") < 300) {
-        var Health = "poor";
+        localStorage.setItem("Health", "poor");
         if (Math.percentChance(50)) {
           if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
@@ -427,83 +426,83 @@ function Day() {
                           } else {
                             var Randomizer = randint(1, );
                             if (Randomizer = 1) {
-                              alert(I"_Got_A_Snakebite");
+                              alert(localStorage.getItem("I") + "_Got_A_Snakebite");
                             } else if (Randomizer = 2) {
-                              alert(I"_Has_Disentary");
+                              alert(localStorage.getItem("I") + "_Has_Disentary");
                             } else if (Randomizer = 3) {
-                              alert(I"_Broke_Their_Arm");
+                              alert(localStorage.getItem("I") + "_Broke_Their_Arm");
                             } else if (Randomizer = 4) {
-                              alert(I"_Broke_Their_Leg");
+                              alert(localStorage.getItem("I") + "_Broke_Their_Leg");
                            }
-                            var Isick = true;
+                            localStorage.setItem("Isick", true);
                           }
                         } else {
-                          alert(W"_Died");
-                          var Wdied = true;
+                          alert(localStorage.getItem("W") + "_Died");
+                          localStorage.setItem("Wdied", true);
                       } else {
                         var Randomizer = randint(1, );
                         if (Randomizer = 1) {
-                          alert(W"_Got_A_Snakebite");
+                          alert(localStorage.getItem("W") + "_Got_A_Snakebite");
                         } else if (Randomizer = 2) {
-                          alert(W"_Has_Disentary");
+                          alert(localStorage.getItem("W") + "_Has_Disentary");
                         } else if (Randomizer = 3) {
-                          alert(W"_Broke_Their_Arm");
+                          alert(localStorage.getItem("W") + "_Broke_Their_Arm");
                         } else if (Randomizer = 4) {
-                          alert(W"_Broke_Their_Leg");
+                          alert(localStorage.getItem("W") + "_Broke_Their_Leg");
                        }
-                        var Wsick = true;
+                        localStorage.setItem("Wsick", true);
                       }
                     } else {
-                    alert(K1"_Died");
-                    var K1died = true;
+                      alert(localStorage.getItem("K1") + "_Died");
+                      localStorage.setItem("K1died", true);
                   } else {
                     var Randomizer = randint(1, );
                     if (Randomizer = 1) {
-                      alert(K1"_Got_A_Snakebite");
+                      alert(localStorage.getItem("K1") + "_Got_A_Snakebite");
                     } else if (Randomizer = 2) {
-                      alert(K1"_Has_Disentary");
+                      alert(localStorage.getItem("K1") + "_Has_Disentary");
                     } else if (Randomizer = 3) {
-                      alert(K1"_Broke_Their_Arm");
+                      alert(localStorage.getItem("K1") + "_Broke_Their_Arm");
                     } else if (Randomizer = 4) {
-                      alert(K1"_Broke_Their_Leg");
+                      alert(localStorage.getItem("K1") + "_Broke_Their_Leg");
                     }
-                    var K1sick = true;
+                    localStorage.setItem("K1sick", true);
                   }
                 } else {
-                  alert(K2"_Died");
-                  var K2died = true;
+                  alert(localStorage.getItem("K2") + "_Died");
+                  localStorage.setItem("K2died", true);
               } else {
                 var Randomizer = randint(1, );
                 if (Randomizer = 1) {
-                  alert(K2"_Got_A_Snakebite");
+                  alert(localStorage.getItem("K2") + "_Got_A_Snakebite");
                 } else if (Randomizer = 2) {
-                  alert(K2"_Has_Disentary");
+                  alert(localStorage.getItem("K2") + "_Has_Disentary");
                 } else if (Randomizer = 3) {
-                  alert(K2"_Broke_Their_Arm");
+                  alert(localStorage.getItem("K2") + "_Broke_Their_Arm");
                 } else if (Randomizer = 4) {
-                  alert(K2"_Broke_Their_Leg");
+                  alert(localStorage.getItem("K2") + "_Broke_Their_Leg");
                 }
-                var K2sick = true;
+                localStorage.setItem("K2sick", true);
               }
             } else {
-              alert(K3"_Died");
-              var K3died = true;
+              alert(localStorage.getItem("K3") + "_Died");
+              localStorage.setItem("K3died", true);
           } else {
             var Randomizer = randint(1, );
             if (Randomizer = 1) {
-              alert(K3"_Got_A_Snakebite");
+              alert(localStorage.getItem("K3") + "_Got_A_Snakebite");
             } else if (Randomizer = 2) {
-              alert(K3"_Has_Disentary");
+              alert(localStorage.getItem("K3") + "_Has_Disentary");
             } else if (Randomizer = 3) {
-              alert(K3"_Broke_Their_Arm");
+              alert(localStorage.getItem("K3") + "_Broke_Their_Arm");
             } else if (Randomizer = 4) {
-              alert(K3"_Broke_Their_Leg");
+              alert(localStorage.getItem("K3") + "_Broke_Their_Leg");
             }
-            var K3sick = true;
+            localStorage.setItem("K3sick", true);
           }
         }
         if (localStorage.getItem("HealthNum") < 200) {
-          var Health = "very-poor";
+          localStorage.setItem("Health", "very-poor");
           if (Math.percentChance(25)) {
           if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
@@ -520,81 +519,81 @@ function Day() {
                           } else {
                             var Randomizer = randint(1, );
                             if (Randomizer = 1) {
-                              alert(I"_Got_A_Snakebite");
+                              alert(localStorage.getItem("I") + "_Got_A_Snakebite");
                             } else if (Randomizer = 2) {
-                              alert(I"_Has_Disentary");
+                              alert(localStorage.getItem("I") + "_Has_Disentary");
                             } else if (Randomizer = 3) {
-                              alert(I"_Broke_Their_Arm");
+                              alert(localStorage.getItem("I") + "_Broke_Their_Arm");
                             } else if (Randomizer = 4) {
-                              alert(I"_Broke_Their_Leg");
+                              alert(localStorage.getItem("I") + "_Broke_Their_Leg");
                            }
-                            var Isick = true;
+                            localStorage.setItem("Isick", true);
                           }
                         } else {
-                          alert(W"_Died");
-                          var Wdied = true;
+                          alert(localStorage.getItem("W") + "_Died");
+                          localStorage.setItem("Wdied", true);
                       } else {
                         var Randomizer = randint(1, );
                         if (Randomizer = 1) {
-                          alert(W"_Got_A_Snakebite");
+                          alert(localStorage.getItem("W") + "_Got_A_Snakebite");
                         } else if (Randomizer = 2) {
-                          alert(W"_Has_Disentary");
+                          alert(localStorage.getItem("W") + "_Has_Disentary");
                         } else if (Randomizer = 3) {
-                          alert(W"_Broke_Their_Arm");
+                          alert(localStorage.getItem("W") + "_Broke_Their_Arm");
                         } else if (Randomizer = 4) {
-                          alert(W"_Broke_Their_Leg");
+                          alert(localStorage.getItem("W") + "_Broke_Their_Leg");
                        }
-                        var Wsick = true;
+                        localStorage.setItem("Wsick", true);
                       }
                     } else {
-                    alert(K1"_Died");
-                    var K1died = true;
+                      alert(localStorage.getItem("K1") + "_Died");
+                      localStorage.setItem("K1died", true);
                   } else {
                     var Randomizer = randint(1, );
                     if (Randomizer = 1) {
-                      alert(K1"_Got_A_Snakebite");
+                      alert(localStorage.getItem("K1") + "_Got_A_Snakebite");
                     } else if (Randomizer = 2) {
-                      alert(K1"_Has_Disentary");
+                      alert(localStorage.getItem("K1") + "_Has_Disentary");
                     } else if (Randomizer = 3) {
-                      alert(K1"_Broke_Their_Arm");
+                      alert(localStorage.getItem("K1") + "_Broke_Their_Arm");
                     } else if (Randomizer = 4) {
-                      alert(K1"_Broke_Their_Leg");
+                      alert(localStorage.getItem("K1") + "_Broke_Their_Leg");
                     }
-                    var K1sick = true;
+                    localStorage.setItem("K1sick", true);
                   }
                 } else {
-                  alert(K2"_Died");
-                  var K2died = true;
+                  alert(localStorage.getItem("K2") + "_Died");
+                  localStorage.setItem("K2died", true);
               } else {
                 var Randomizer = randint(1, );
                 if (Randomizer = 1) {
-                  alert(K2"_Got_A_Snakebite");
+                  alert(localStorage.getItem("K2") + "_Got_A_Snakebite");
                 } else if (Randomizer = 2) {
-                  alert(K2"_Has_Disentary");
+                  alert(localStorage.getItem("K2") + "_Has_Disentary");
                 } else if (Randomizer = 3) {
-                  alert(K2"_Broke_Their_Arm");
+                  alert(localStorage.getItem("K2") + "_Broke_Their_Arm");
                 } else if (Randomizer = 4) {
-                  alert(K2"_Broke_Their_Leg");
+                  alert(localStorage.getItem("K2") + "_Broke_Their_Leg");
                 }
-                var K2sick = true;
+                localStorage.setItem("K2sick", true);
               }
             } else {
-              alert(K3"_Died");
-              var K3died = true;
+              alert(localStorage.getItem("K3") + "_Died");
+              localStorage.setItem("K3died", true);
           } else {
             var Randomizer = randint(1, );
             if (Randomizer = 1) {
-              alert(K3"_Got_A_Snakebite");
+              alert(localStorage.getItem("K3") + "_Got_A_Snakebite");
             } else if (Randomizer = 2) {
-              alert(K3"_Has_Disentary");
+              alert(localStorage.getItem("K3") + "_Has_Disentary");
             } else if (Randomizer = 3) {
-              alert(K3"_Broke_Their_Arm");
+              alert(localStorage.getItem("K3") + "_Broke_Their_Arm");
             } else if (Randomizer = 4) {
-              alert(K3"_Broke_Their_Leg");
+              alert(localStorage.getItem("K3") + "_Broke_Their_Leg");
             }
-            var K3sick = true;
+            localStorage.setItem("K3sick", true);
           }
-        }
+          }
         }
       }
     }
