--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -208,7 +208,7 @@ function Day() {
         if (Math.percentChance(50)) {
           if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
-              if (localStorage.getItem("k2sick")) {
+              if (localStorage.getItem("K2sick")) {
                 if (localStorage.getItem("K2died")) {
                   if (localStorage.getItem("K1sick")) {
                     if (localStorage.getItem("K1died")) {
@@ -277,7 +277,7 @@ function Day() {
                 } else if (Randomizer = 4) {
                   alert(localStorage.getItem("K2"); + "_Broke_Their_Leg");
                 }
-                localStorage.setItem("k2sick", true);
+                localStorage.setItem("K2sick", true);
               }
             } else {
               alert(localStorage.getItem("K3"); + "_Died");
@@ -301,7 +301,7 @@ function Day() {
           if (Math.percentChance(25)) {
           if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
-              if (localStorage.getItem("k2sick")) {
+              if (localStorage.getItem("K2sick")) {
                 if (localStorage.getItem("K2died")) {
                   if (localStorage.getItem("K1sick")) {
                     if (localStorage.getItem("K1died")) {
@@ -370,7 +370,7 @@ function Day() {
                 } else if (Randomizer = 4) {
                   alert(localStorage.getItem("K2"); + "_Broke_Their_Leg");
                 }
-                localStorage.setItem("k2sick", true);
+                localStorage.setItem("K2sick", true);
               }
             } else {
               alert(localStorage.getItem("K3"); + "_Died");
