--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -174,7 +174,7 @@ function Run() {
         if (Math.percentChance(50)) {
           if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
-              if (localStorage.getItem("k2sick")) {
+              if (localStorage.getItem("K2sick")) {
                 if (localStorage.getItem("K2died")) {
                   if (localStorage.getItem("K1sick")) {
                     if (localStorage.getItem("K1died")) {
@@ -243,7 +243,7 @@ function Run() {
                 } else if (Randomizer = 4) {
                   alert(localStorage.getItem("K2") + "_Broke_Their_Leg");
                 }
-                localStorage.setItem("k2sick", true);
+                localStorage.setItem("K2sick", true);
               }
             } else {
               alert(localStorage.getItem("K3") + "_Died");
@@ -267,7 +267,7 @@ function Run() {
           if (Math.percentChance(25)) {
           if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
-              if (localStorage.getItem("k2sick")) {
+              if (localStorage.getItem("K2sick")) {
                 if (localStorage.getItem("K2died")) {
                   if (localStorage.getItem("K1sick")) {
                     if (localStorage.getItem("K1died")) {
@@ -336,7 +336,7 @@ function Run() {
                 } else if (Randomizer = 4) {
                   alert(localStorage.getItem("K2") + "_Broke_Their_Leg");
                 }
-                localStorage.setItem("k2sick", true);
+                localStorage.setItem("K2sick", true);
               }
             } else {
               alert(localStorage.getItem("K3") + "_Died");
