--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -157,7 +157,9 @@ basic.forever(function () {
       if (confirm("You_Have_Reached_The_Dalles.-Would_You_Like_To_Take_A_Gander?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/Dalles");
       }
-      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/ColumbiaRiver1");
+      if (confirm("Congradulations!-You_Have_Made_It_To_The_Columbia_River.-Now,_Lets_See_If_You_Can_Survive_It!")) {
+      }
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/ColumbiaRiver");
     }
   }
   if (localStorage.getItem("Wheather") = "cold" && localStorage.getItem("Clothing") < 5) {
