--- a/Gregames/index.html
+++ b/Gregames/index.html
@@ -2,6 +2,7 @@
 <title>Student On Task - Please Be On Task</title>
 <h style="font-size:50px;">Gregary Games</h><br><br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/Greg-Craft"><button type="button">Greg-Craft</button></a><br><br>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/GregRun">
 <a href="https://0038509gd.github.io/Greg.com/"><button type="button">Return</button></a>
 </body></html><script>
   document.body.style.background = "black";
