--- a/Gregames/index.html
+++ b/Gregames/index.html
@@ -2,7 +2,8 @@
 <title>Student On Task - Please Be On Task</title>
 <h style="font-size:50px;">Gregary Games</h><br><br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/Greg-Craft"><button type="button">Greg-Craft</button></a><br><br>
-<a href="https://0038509gd.github.io/Greg.com/Gregames/GregRun">
+<a href="https://0038509gd.github.io/Greg.com/Gregames/GregRun"><button>Greg-Run</button></a>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/GregVGreg"><button>Greg-V-Greg</button></a>
 <a href="https://0038509gd.github.io/Greg.com/"><button type="button">Return</button></a>
 </body></html><script>
   document.body.style.background = "black";
