--- a/Gregames/index.html
+++ b/Gregames/index.html
@@ -4,6 +4,7 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/Greg-Craft"><button type="button">Greg-Craft</button></a><br><br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/GregRun"><button>Greg-Run</button></a>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/GregVGreg"><button>Greg-V-Greg</button></a>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/Greg-Vs.-Gary.LaughOutLoud"><button>Greg.lol</button></a>
 <a href="https://0038509gd.github.io/Greg.com/"><button type="button">Return</button></a>
 </body></html><script>
   document.body.style.background = "black";
